# taoreg-frontend-cli

./: README.md  build_custom_prod.py  build_custom_test.py  pyproject.toml
src/btreg/: __init__.py  bootcli.py  pcli.py  version.py
src/taoreg/: bootcli.py  pcli.py  version.py
src/taoreg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
